syntax = "proto2";

option cc_enable_arenas = true;
option optimize_for = LITE_RUNTIME;

package Molch.Protobuf;

message Header {
	optional bytes public_ephemeral_key = 1;
	//fixed32 in order to not leak data from the length
	optional fixed32 message_number = 2;
	optional fixed32 previous_message_number = 3;
}
