syntax = "proto2";

option cc_enable_arenas = true;
option optimize_for = LITE_RUNTIME;

package Molch.Protobuf;

import "key.proto";

message KeyBundle {
	required Key header_key = 1;
	required Key message_key = 2;
	optional uint64 expiration_time = 3;
}
